@@ -1204,6 +1204,11 @@ for-value   NIL or T
                ((eq (car L) var) i))))
     (values k n m)))
 
+(define-compiler-macro ext:special-variable-p (var &optional env &whole form)
+  (case env
+    ((nil) form)                ; no env ==> decline
+    ((t) (eq 'special (sys::venv-search (eval var))))
+    (otherwise (%uncompilable form))))
 
 ;;;;****             CONSTANT   MANAGEMENT
 
