@@ -14,6 +14,8 @@ User visible changes
   specifies what to do with the obsolete .fas files.
   See <http://clisp.cons.org/impnotes.html#loadfile> for details.
 
+* EXT:SPECIAL-VARIABLE-P now accepts a second optional ENVIRONMENT argument.
+  See <http://clisp.cons.org/impnotes.html#spe-var-p> for details.
 
 2.30 (2002-09-15)
 =================
